--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nucampsite",
+  "name": "watertracker",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -28,14 +28,17 @@
     "expo-notifications": "~0.17.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.9.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "8.0.5",
     "redux": "4.2.1",
