--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     "expo-status-bar": "~1.4.2",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-animatable": "^1.3.3",
+    "react-native-date-picker": "^4.2.13",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-progress": "^5.0.0",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "^3.4.1",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "8.0.5",
     "redux": "4.2.1",
