--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-mail-composer": "~12.0.0",
     "expo-media-library": "~15.0.0",
     "expo-notifications": "~0.17.0",
+    "expo-permissions": "^14.1.1",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "prop-types": "^15.8.1",
